force-app/main/default/objects/Reward_Criteria__c/Reward_Criteria__c.object-meta.xml
<CustomObject>
    <label>Reward Criteria</label>
    <nameField>
        <displayFormat>RWC-{0000}</displayFormat>
        <label>Reward Criteria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reward Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>