force-app/main/default/objects/Reward_Criteria__c/fields/Referral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Amount__c</fullName>
    <label>Referral Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>