force-app/main/default/objects/Reward_Criteria__c/fields/Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>Reward_Type__c</fullName>
    <label>Reward Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>